--- a/Desafio.html
+++ b/Desafio.html
@@ -7,6 +7,7 @@
     <li> Terminar meu frances</li>
     <li>Atuar na área de Programação</li>
     <li>Começar meus Investimentoss</li>
+    <li>focar no inglês</li>
 </ul>
 <br>
 <a href="https://www.linkedin.com/in/rogersson-fernando-de-souza-b4b76615a/" target="_blank">Meu Linkidin</a>
