HTML Easy Shopping
Atualização da Lista Easy Shopping

--- a/HTML semantico.html
+++ b/HTML semantico.html
@@ -1,7 +1,7 @@
 <header>
     <div>
         <img src="../../DevClub/aurora.jpeg.webp"
-        <a>Tenis</a>
+        <a>Tenis Esportivos</a>
         <a>Jaquetas</a>
         <a>Materiais esportivos</a>
     </div>
